Phrase based agent body implementation

--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Agent.cs" />
+    <Compile Include="Body.cs" />
+    <Compile Include="BodyPart.cs" />
     <Compile Include="EmptyAgent.cs" />
     <Compile Include="Experiments.cs" />
     <Compile Include="Interpretation\CommandContext.cs" />
