--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -42,32 +42,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Agent.cs" />
-    <Compile Include="Body.cs" />
-    <Compile Include="BodyPart.cs" />
-    <Compile Include="EmptyAgent.cs" />
-    <Compile Include="Experiments.cs" />
-    <Compile Include="Interpretation\CommandContext.cs" />
-    <Compile Include="Interpretation\EvaluationContext.cs" />
-    <Compile Include="Interpretation\EvaluationResult.cs" />
-    <Compile Include="Interpretation\Evaluator.cs" />
-    <Compile Include="Knowledge\Database.cs" />
-    <Compile Include="Knowledge\DbResult.cs" />
-    <Compile Include="Knowledge\DbEntry.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="MindSet.cs" />
-    <Compile Include="RestaurantAgent.cs" />
-    <Compile Include="SemanticRepresentation\DbConstraint.cs" />
-    <Compile Include="SemanticRepresentation\EntityBox.cs" />
-    <Compile Include="SemanticRepresentation\Match.cs" />
-    <Compile Include="SemanticRepresentation\MatchElement.cs" />
-    <Compile Include="SemanticRepresentation\ParsingResult.cs" />
-    <Compile Include="SemanticRepresentation\Parser.cs" />
+    <Compile Include="V1\Agent.cs" />
+    <Compile Include="V1\Body.cs" />
+    <Compile Include="V1\BodyPart.cs" />
+    <Compile Include="V1\EmptyAgent.cs" />
+    <Compile Include="V1\Experiments.cs" />
+    <Compile Include="V1\Knowledge\Interpretation\CommandContext.cs" />
+    <Compile Include="V1\Knowledge\Interpretation\EvaluationContext.cs" />
+    <Compile Include="V1\Knowledge\Interpretation\EvaluationResult.cs" />
+    <Compile Include="V1\Knowledge\Interpretation\Evaluator.cs" />
+    <Compile Include="V1\Knowledge\Database.cs" />
+    <Compile Include="V1\Knowledge\DbResult.cs" />
+    <Compile Include="V1\Knowledge\DbEntry.cs" />
+    <Compile Include="V1\Log.cs" />
+    <Compile Include="V1\MindSet.cs" />
+    <Compile Include="V1\RestaurantAgent.cs" />
+    <Compile Include="V1\SemanticRepresentation\DbConstraint.cs" />
+    <Compile Include="V1\SemanticRepresentation\EntityBox.cs" />
+    <Compile Include="V1\SemanticRepresentation\Match.cs" />
+    <Compile Include="V1\SemanticRepresentation\MatchElement.cs" />
+    <Compile Include="V1\SemanticRepresentation\ParsingResult.cs" />
+    <Compile Include="V1\SemanticRepresentation\Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SemanticRepresentation\PatternMatcher.cs" />
-    <Compile Include="SemanticRepresentation\RelationBox.cs" />
-    <Compile Include="SemanticRepresentation\SemanticPattern.cs" />
+    <Compile Include="V1\SemanticRepresentation\PatternMatcher.cs" />
+    <Compile Include="V1\SemanticRepresentation\SemanticPattern.cs" />
+    <Compile Include="V2\Body.cs" />
+    <Compile Include="V2\EmptyAgent.cs" />
+    <Compile Include="V2\Experiments.cs" />
+    <Compile Include="V2\Log.cs" />
+    <Compile Include="V2\Mind.cs" />
+    <Compile Include="V2\SemanticItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
