Restaurant agent. Bugged version - span is not fully evaluated.

--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -68,17 +68,19 @@
     <Compile Include="V1\SemanticRepresentation\PatternMatcher.cs" />
     <Compile Include="V1\SemanticRepresentation\SemanticPattern.cs" />
     <Compile Include="V2\Body.cs" />
-    <Compile Include="V2\ConstraintContext.cs" />
     <Compile Include="V2\Database.cs" />
+    <Compile Include="V2\DatabaseHandler.cs" />
     <Compile Include="V2\EmptyAgent.cs" />
-    <Compile Include="V2\EvaluatedSpanDatabase.cs" />
+    <Compile Include="V2\EvaluatedDatabase.cs" />
     <Compile Include="V2\EvaluationContext.cs" />
+    <Compile Include="V2\EvaluationLogEntry.cs" />
     <Compile Include="V2\Experiments.cs" />
     <Compile Include="V2\InputMatcher.cs" />
     <Compile Include="V2\Log.cs" />
     <Compile Include="V2\MatchFactory.cs" />
     <Compile Include="V2\Mind.cs" />
-    <Compile Include="V2\SpanDatabase.cs" />
+    <Compile Include="V2\RestaurantAgent.cs" />
+    <Compile Include="V2\Sensor.cs" />
     <Compile Include="V2\QueryLog.cs" />
     <Compile Include="V2\SemanticItem.cs" />
   </ItemGroup>
