--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -68,8 +68,11 @@
     <Compile Include="V1\SemanticRepresentation\PatternMatcher.cs" />
     <Compile Include="V1\SemanticRepresentation\SemanticPattern.cs" />
     <Compile Include="V2\Body.cs" />
+    <Compile Include="V2\BodyModuleBase.cs" />
+    <Compile Include="V2\Modules\ExternalDatabaseProviderModule.cs" />
     <Compile Include="V2\Database.cs" />
     <Compile Include="V2\DatabaseHandler.cs" />
+    <Compile Include="V2\DataContainer.cs" />
     <Compile Include="V2\EmptyAgent.cs" />
     <Compile Include="V2\EvaluatedDatabase.cs" />
     <Compile Include="V2\EvaluationContext.cs" />
@@ -79,6 +82,7 @@
     <Compile Include="V2\Log.cs" />
     <Compile Include="V2\MatchFactory.cs" />
     <Compile Include="V2\Mind.cs" />
+    <Compile Include="V2\Question.cs" />
     <Compile Include="V2\RestaurantAgent.cs" />
     <Compile Include="V2\Sensor.cs" />
     <Compile Include="V2\QueryLog.cs" />
