--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -107,6 +107,15 @@
     <Compile Include="V3\Models\StrategyModelBase.cs" />
     <Compile Include="V3\PointingAgent.cs" />
     <Compile Include="V3\RankedConcept.cs" />
+    <Compile Include="V4\Body.cs" />
+    <Compile Include="V4\BodyState2.cs" />
+    <Compile Include="V4\ConceptInstance.cs" />
+    <Compile Include="V4\Experiments.cs" />
+    <Compile Include="V4\Models\HandcraftedGenerator.cs" />
+    <Compile Include="V4\PointableBase.cs" />
+    <Compile Include="V4\PointingGeneratorBase.cs" />
+    <Compile Include="V4\RankedPointing.cs" />
+    <Compile Include="V4\StateBeam.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -117,5 +126,6 @@
       <Name>KnowledgeDialog</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
