--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Knowledge\PathFactory.cs" />
     <Compile Include="Knowledge\PathSegment.cs" />
     <Compile Include="Knowledge\Group.cs" />
+    <Compile Include="Knowledge\DocumentIndex.cs" />
     <Compile Include="Knowledge\VoteContainer.cs" />
     <Compile Include="Knowledge\Votes.cs" />
     <Compile Include="PoolComputation\ActionBlock.cs" />
