--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -100,6 +100,8 @@
     <Compile Include="V3\ConceptRequirement.cs" />
     <Compile Include="V3\ContextBeam.cs" />
     <Compile Include="V3\Experiments.cs" />
+    <Compile Include="V4\AllowedPointableBaseConstraint.cs" />
+    <Compile Include="V4\Configuration.cs" />
     <Compile Include="V4\Phrase.cs" />
     <Compile Include="V3\Models\HandcraftedStrategy.cs" />
     <Compile Include="V3\Models\ScoreModelBase.cs" />
@@ -117,7 +119,7 @@
     <Compile Include="V4\Experiments.cs" />
     <Compile Include="V4\Models\HandcraftedModel.cs" />
     <Compile Include="V4\ParameterRequirement.cs" />
-    <Compile Include="V4\PointableBase.cs" />
+    <Compile Include="V4\PointableInstance.cs" />
     <Compile Include="V4\PointingModelBase.cs" />
     <Compile Include="V4\RankedPointing.cs" />
     <Compile Include="V4\StateBeam.cs" />
