Adds Event beam generation and low level policy (param substitutions)

--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -108,9 +108,27 @@
     <Compile Include="V4\Brain\MindState.cs" />
     <Compile Include="V4\Brain\PlanProvider.cs" />
     <Compile Include="V4\Brain\SubstitutionPoint.cs" />
+    <Compile Include="V4\EventBeam\BeamGenerator.cs" />
+    <Compile Include="V4\EventBeam\BeamNode.cs" />
+    <Compile Include="V4\Events\CompleteInstanceEvent.cs" />
+    <Compile Include="V4\Events\TargetDefinedEvent.cs" />
+    <Compile Include="V4\Events\UnknownPhraseSubstitutionEvent.cs" />
+    <Compile Include="V4\Events\DistanceScoreEvt.cs" />
+    <Compile Include="V4\Events\EventBase.cs" />
+    <Compile Include="V4\Events\InstanceActivationEvent.cs" />
+    <Compile Include="V4\Events\ConceptDescriptionEvent.cs" />
+    <Compile Include="V4\Events\ConceptDefinedEvent.cs" />
+    <Compile Include="V4\Events\InputPhraseEvent.cs" />
+    <Compile Include="V4\Events\InputPhraseScoreEvent.cs" />
+    <Compile Include="V4\Events\SubstitutionRequestEvent.cs" />
+    <Compile Include="V4\Events\SubstitutionEvent.cs" />
+    <Compile Include="V4\Events\TracedScoreEventBase.cs" />
+    <Compile Include="V4\Events\UnknownPhraseEvent.cs" />
     <Compile Include="V4\MindStateInstance.cs" />
     <Compile Include="V4\Models\EventBasedNLG.cs" />
     <Compile Include="V4\Models\MindBasedModel.cs" />
+    <Compile Include="V4\Models\PolicyModel.cs" />
+    <Compile Include="V4\Primitives\ParameterDefinition.cs" />
     <Compile Include="V4\Phrase.cs" />
     <Compile Include="V3\Models\HandcraftedStrategy.cs" />
     <Compile Include="V3\Models\ScoreModelBase.cs" />
