--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -102,13 +102,19 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Agent.cs" />
     <Compile Include="V4\Configuration.cs" />
+    <Compile Include="V4\EventBeam\ExecutionBeamGenerator.cs" />
+    <Compile Include="V4\Events\ActiveInstanceBarrierEvent.cs" />
     <Compile Include="V4\EventBeam\BeamGenerator.cs" />
     <Compile Include="V4\EventBeam\BeamNode.cs" />
-    <Compile Include="V4\EventBeam\ExecutionBeamGenerator.cs" />
-    <Compile Include="V4\EventBeam\RestaurantPolicyBeam.cs" />
+    <Compile Include="V4\EventBeam\FullExecutionBeamGenerator.cs" />
+    <Compile Include="V4\EventBeam\PolicyBeamGenerator.cs" />
+    <Compile Include="V4\EventBeam\RestaurantDomainBeamGenerator.cs" />
+    <Compile Include="V4\Events\ResultEvent.cs" />
+    <Compile Include="V4\Events\UnknownPhraseSubstitutedEvent.cs" />
     <Compile Include="V4\Events\CompleteInstanceEvent.cs" />
     <Compile Include="V4\Events\InstanceFoundEvent.cs" />
-    <Compile Include="V4\Events\NewTurnEvent.cs" />
+    <Compile Include="V4\Events\TurnEndEvent.cs" />
+    <Compile Include="V4\Events\TurnStartEvent.cs" />
     <Compile Include="V4\Events\NoInstanceFoundEvent.cs" />
     <Compile Include="V4\Events\ParamDefinedEvent.cs" />
     <Compile Include="V4\Events\StaticScoreEvent.cs" />
