--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -102,7 +102,11 @@
     <Compile Include="V3\Experiments.cs" />
     <Compile Include="V4\Agent.cs" />
     <Compile Include="V4\Configuration.cs" />
+    <Compile Include="V4\EventBeam\AdviceProcessingBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\ExecutionBeamGenerator.cs" />
+    <Compile Include="V4\EventBeam\FeatureGenerator.cs" />
+    <Compile Include="V4\Events\ConfirmationAcceptedEvent.cs" />
+    <Compile Include="V4\Events\SubstitutionConfirmationRequestEvent.cs" />
     <Compile Include="V4\Events\InstanceUnderstoodEvent.cs" />
     <Compile Include="V4\Events\PhraseStillNotKnownEvent.cs" />
     <Compile Include="V4\Events\ActiveInstanceBarrierEvent.cs" />
@@ -111,6 +115,7 @@
     <Compile Include="V4\EventBeam\FullExecutionBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\PolicyBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\RestaurantDomainBeamGenerator.cs" />
+    <Compile Include="V4\Events\PropertySetScoreEvent.cs" />
     <Compile Include="V4\Events\ResultEvent.cs" />
     <Compile Include="V4\Events\UnknownPhraseSubstitutedEvent.cs" />
     <Compile Include="V4\Events\CompleteInstanceEvent.cs" />
