Refactor to ability based beam generation.

--- a/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
+++ b/PerceptiveDialogBasedAgent/PerceptiveDialogBasedAgent.csproj
@@ -100,38 +100,35 @@
     <Compile Include="V3\ConceptRequirement.cs" />
     <Compile Include="V3\ContextBeam.cs" />
     <Compile Include="V3\Experiments.cs" />
+    <Compile Include="V4\Abilities\AbilityBase.cs" />
+    <Compile Include="V4\Abilities\ConceptAbilityBase.cs" />
+    <Compile Include="V4\Abilities\WhatProvider.cs" />
+    <Compile Include="V4\Abilities\FindProvider.cs" />
+    <Compile Include="V4\Abilities\DefiniteReferenceResolver.cs" />
+    <Compile Include="V4\Abilities\KnowledgeAbilityBase.cs" />
+    <Compile Include="V4\Abilities\RestaurantDomainKnowledge.cs" />
     <Compile Include="V4\Agent.cs" />
     <Compile Include="V4\Configuration.cs" />
+    <Compile Include="V4\EventBeam\AbilityBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\AdviceProcessingBeamGenerator.cs" />
-    <Compile Include="V4\EventBeam\ExecutionBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\FeatureGenerator.cs" />
     <Compile Include="V4\Events\CloseEvent.cs" />
-    <Compile Include="V4\Events\ConfirmationAcceptedEvent.cs" />
-    <Compile Include="V4\Events\GoalEvent.cs" />
-    <Compile Include="V4\Events\SubstitutionConfirmationRequestEvent.cs" />
-    <Compile Include="V4\Events\InstanceUnderstoodEvent.cs" />
-    <Compile Include="V4\Events\PhraseStillNotKnownEvent.cs" />
-    <Compile Include="V4\Events\ActiveInstanceBarrierEvent.cs" />
+    <Compile Include="V4\Events\FrameEvent.cs" />
     <Compile Include="V4\EventBeam\BeamGenerator.cs" />
     <Compile Include="V4\EventBeam\BeamNode.cs" />
     <Compile Include="V4\EventBeam\FullExecutionBeamGenerator.cs" />
     <Compile Include="V4\EventBeam\PolicyBeamGenerator.cs" />
-    <Compile Include="V4\EventBeam\RestaurantDomainBeamGenerator.cs" />
+    <Compile Include="V4\Events\InstanceReferencedEvent.cs" />
     <Compile Include="V4\Events\PropertySetScoreEvent.cs" />
-    <Compile Include="V4\Events\ResultEvent.cs" />
-    <Compile Include="V4\Events\UnknownPhraseSubstitutedEvent.cs" />
-    <Compile Include="V4\Events\CompleteInstanceEvent.cs" />
-    <Compile Include="V4\Events\InstanceFoundEvent.cs" />
+    <Compile Include="V4\Events\InstanceActiveEvent.cs" />
+    <Compile Include="V4\Events\InformationReportEvent.cs" />
     <Compile Include="V4\Events\TurnEndEvent.cs" />
     <Compile Include="V4\Events\TurnStartEvent.cs" />
-    <Compile Include="V4\Events\NoInstanceFoundEvent.cs" />
     <Compile Include="V4\Events\ParamDefinedEvent.cs" />
     <Compile Include="V4\Events\StaticScoreEvent.cs" />
-    <Compile Include="V4\Events\TooManyInstancesFoundEvent.cs" />
-    <Compile Include="V4\Events\UnknownPhraseSubstitutionEvent.cs" />
     <Compile Include="V4\Events\DistanceScoreEvt.cs" />
     <Compile Include="V4\Events\EventBase.cs" />
-    <Compile Include="V4\Events\InstanceActivationEvent.cs" />
+    <Compile Include="V4\Events\InstanceActivationRequestEvent.cs" />
     <Compile Include="V4\Events\ConceptDescriptionEvent.cs" />
     <Compile Include="V4\Events\ConceptDefinedEvent.cs" />
     <Compile Include="V4\Events\InputPhraseEvent.cs" />
@@ -139,7 +136,6 @@
     <Compile Include="V4\Events\SubstitutionRequestEvent.cs" />
     <Compile Include="V4\Events\PropertySetEvent.cs" />
     <Compile Include="V4\Events\TracedScoreEventBase.cs" />
-    <Compile Include="V4\Events\UnknownPhraseEvent.cs" />
     <Compile Include="V4\Models\EventBasedNLG.cs" />
     <Compile Include="V4\Primitives\ParameterDefinition.cs" />
     <Compile Include="V4\Phrase.cs" />
